# ROS_Protbuf

./: readme.md
result/50MB/: pb7.pcapng  pb8.pcapng
ros_protobuf_msg/: .gitignore  CMakeLists.txt  package.xml  pb_listener.cpp  pb_talker.cpp  pbtest.launch  ros_listener.cpp  ros_talker.cpp  rostest.launch
ros_protobuf_msg/message_serialization/include/ros/: serialization.h  serialization_protobuffer.h
ros_protobuf_msg/message_traits/include/ros/: protobuffer_traits.h
ros_protobuf_msg/sample_protos/: publish_info.proto
ros_protobuf_msg/test/: test_proto.cpp
ros_protobuf_msg/test/proto/: superbai.proto
