<?xml version="1.0"?>
<package>
  <name>excavator_extension</name>
  <version>0.0.0</version>
  <description>proto sample package</description>
  <maintainer email="22325213@zju.edu.cn">hjy</maintainer>
  <license>hjy license</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>
